# verzola

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  REQUIREMENTS.md  SECURITY.md
docs/: inbound-listener.md  inbound-policy-telemetry.md  inbound-postfix-integration.md  outbound-relay-configuration.md  policy-renderer-artifact-semantics.md  policy-reporting-cli.md  policy-schema-reference.md  version-v0.1.10-docs.md  version-v0.1.11-docs.md  version-v0.1.12-docs.md  version-v0.1.13-docs.md  version-v0.1.5-docs.md  version-v0.1.6-docs.md  version-v0.1.7-docs.md  version-v0.1.8-docs.md  version-v0.1.9-docs.md
docs/adr/: 0001-u1-b1-listener-starttls-state-machine.md  0002-u1-b2-streaming-forwarder.md  0003-u1-b3-inbound-policy-and-telemetry.md  0004-u2-b1-outbound-session-orchestration.md  0005-u2-b2-delivery-status-contract.md  0006-u2-b3-outbound-tls-policy-application.md  0007-u3-b1-schema-validation-engine.md  (+2 more)
learn/: u1-b1-inbound-starttls-study-guide.md  u1-b2-streaming-forwarder-study-guide.md  u1-b3-inbound-policy-telemetry-study-guide.md
verzola-control/: pyproject.toml
verzola-control/tests/: test_render_engine.py  test_report_engine.py  test_validate_engine.py
verzola-control/verzola_control/: __init__.py  cli.py
verzola-control/verzola_control/policy/: __init__.py  model.py  parser.py
verzola-control/verzola_control/render/: __init__.py  engine.py
verzola-control/verzola_control/report/: __init__.py  engine.py
verzola-control/verzola_control/validate/: __init__.py  engine.py
verzola-proxy/: Cargo.toml  rustc_probe.rs
(+40 files in other folders)
