[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verzola-control"
version = "0.1.0"
description = "Policy schema and validation engine for VERZOLA control plane."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
verzolactl = "verzola_control.cli:main"

[tool.setuptools]
packages = [
  "verzola_control",
  "verzola_control.policy",
  "verzola_control.render",
  "verzola_control.validate",
]
